--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -15,4 +15,4 @@ task:
   
   build_script:
     - wget https://github.com/TheUnknownName/ROMBuilder-CI/raw/main/prop-rom.prop
-    - bash build.sh ${CIRRUS_WORKING_DIR}/prop-rom.prop
+    - bash -x build.sh ${CIRRUS_WORKING_DIR}/prop-rom.prop
