--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -5,8 +5,8 @@ env:
 
 task:
   name: "build rom CI by TheUnknownName06@${CIRRUS_USER}:${CIRRUS_BRANCH}"
-  #skip: $CIRRUS_BRANCH == 'main'
-  # auto_cancellation: $CIRRUS_BRANCH == 'autocancel'
+  skip: $CIRRUS_BRANCH == 'main'
+  auto_cancellation: $CIRRUS_BRANCH == 'autocancel'
   timeout_in: 300m
   container:
     dockerfile: Dockerfile
