--- a/.github/workflows/rom.yml
+++ b/.github/workflows/rom.yml
@@ -20,3 +20,8 @@ jobs:
     - name: Cleanup
       uses: rokibhasansagar/slimhub_actions@main
       # That's it! Now use your normal steps
+    - name: Prepare the environment
+      run: |
+        sudo apt update
+        sudo apt -y upgrade
+        sudo apt -y install git wget curl
