--- a/.github/workflows/rom.yml
+++ b/.github/workflows/rom.yml
@@ -1,5 +1,10 @@
 name: ROM BUILDER
 
+on:
+    push:
+       branches:
+          - main
+
 jobs:
   build:
     if: github.event.repository.owner.id == github.event.sender.id
