--- a/.github/workflows/rom.yml
+++ b/.github/workflows/rom.yml
@@ -7,7 +7,6 @@ on:
 
 jobs:
   build:
-    if: github.event.repository.owner.id == github.event.sender.id
     runs-on: ubuntu-20.04
     permissions:
       contents: write
@@ -15,7 +14,7 @@ jobs:
     - name: Display Run Parameters
       run: |
         echo "::group::User Environment Variables"
-        echo "PWD: ${{ GITHUB_ACTION_PATH }}"
+        echo "PWD: $PWD"
         echo "::endgroup::"
  
     # You might want to Checkout your repo first, but not mandatory
