cancel using docker

--- a/.github/workflows/rom.yml
+++ b/.github/workflows/rom.yml
@@ -7,9 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: docker
-    container:
-       image: Dockerfile
+    runs-on: ubuntu-20.04
     permissions:
       contents: write
     steps:
@@ -31,5 +29,8 @@ jobs:
       run: |
         sudo apt update
         sudo apt -y upgrade
-        sudo apt -y install git wget curl
+        sudo apt-get install -y git sudo neofetch unzip apt-utils curl wget 
+        wget https://dl.google.com/android/repository/platform-tools-latest-linux.zip && unzip platform-tools-latest-linux.zip -d /tmp/ && export PATH="/tmp/platform-tools:$PATH"
+        cd /tmp && git clone https://github.com/akhilnarang/scripts   && cd scripts && bash setup/android_build_env.sh
+        curl https://storage.googleapis.com/git-repo-downloads/repo > /tmp/bin/repo  && chmod a+x /tmp/bin/repo && export PATH="/tmp/bin:$PATH"
          
