--- a/.github/workflows/rom.yml
+++ b/.github/workflows/rom.yml
@@ -32,5 +32,8 @@ jobs:
         sudo apt-get install -y git sudo neofetch unzip apt-utils curl wget 
         wget https://dl.google.com/android/repository/platform-tools-latest-linux.zip && unzip platform-tools-latest-linux.zip -d /tmp/ && export PATH="/tmp/platform-tools:$PATH"
         cd /tmp && git clone https://github.com/akhilnarang/scripts   && cd scripts && bash setup/android_build_env.sh
+        mkdir /tmp/bin
         curl https://storage.googleapis.com/git-repo-downloads/repo > /tmp/bin/repo  && chmod a+x /tmp/bin/repo && export PATH="/tmp/bin:$PATH"
+        mkdir /tmp/rom
+        cd /tmp/rom
          
