since bash not found changing to ./ exec

--- a/.github/workflows/rom.yml
+++ b/.github/workflows/rom.yml
@@ -52,4 +52,4 @@ jobs:
     - name: building rom
       run:
         chmod a+x build.sh
-        bash build.sh prop-rom.prop
+        ./build.sh prop-rom.prop
